--- a/trial.html
+++ b/trial.html
@@ -6,14 +6,10 @@
     <title>My Portfolio</title>
     <link href="logo1.png" rel="icon">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <link rel="stylesheet" href="1.3.0\css\line-awesome.min.css">
+    <link rel="stylesheet" href="1.3.0/css/line-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="style.css">
-
 </head>
-<script>
-    
-</script>
 <body>
     <!-- Theme Toggle Button -->
     <button class="theme-toggle" onclick="toggleTheme()">
@@ -268,7 +264,7 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h1 class="section-title">My Projects</h1>
+        <h1 style="text-align: center; font-size: 70px; color: var(--text-primary); margin-bottom: 40px;">My Projects</h1>
         <div class="project-filters">
             <button class="filter-btn active" data-filter="all">All</button>
             <button class="filter-btn" data-filter="html">HTML</button>
@@ -279,8 +275,7 @@
         <div class="projects-container">
             <div class="project-card" data-category="html">
                 <div class="project-image">
-                    <img src="https://picsum.photos/id/124/200/300
-                    " alt="Project 1">
+                    <img src="https://picsum.photos/200/300" alt="Project 1">
                 </div>
                 <div class="project-content">
                     <h3>HTML Project</h3>
@@ -299,7 +294,7 @@
 
             <div class="project-card" data-category="css">
                 <div class="project-image">
-                    <img src="https://picsum.photos/id/124/200/300" alt="Project 2">
+                    <img src="https://picsum.photos/200/300" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>CSS Project</h3>
@@ -318,7 +313,7 @@
 
             <div class="project-card" data-category="python">
                 <div class="project-image">
-                    <img src="https://picsum.photos/id/124/200/300" alt="Project 3">
+                    <img src="https://picsum.photos/200/300" alt="Project 3">
                 </div>
                 <div class="project-content">
                     <h3>Python Project</h3>
@@ -337,7 +332,7 @@
 
             <div class="project-card" data-category="javascript">
                 <div class="project-image">
-                    <img src="https://picsum.photos/id/124/200/300" alt="Project 4">
+                    <img src="https://picsum.photos/200/300" alt="Project 4">
                 </div>
                 <div class="project-content">
                     <h3>JavaScript Project</h3>
@@ -372,6 +367,16 @@
         </div>
     </section>
 
+    <div id="uploadModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Upload Your Resume Data</h2>
+            <p>Please select your recently downloaded resume JSON file to update the portfolio.</p>
+            <input type="file" id="jsonFileInput" accept=".json">
+            <button onclick="handleFileUpload()" class="upload-btn">Upload</button>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer id="social">
         <center>
@@ -395,6 +400,120 @@
             </div>
         </center>
     </footer>
+
+    <script src="script.js"></script>
+
+    <script>
+        // Show modal when page loads
+        window.addEventListener('DOMContentLoaded', function() {
+            const modal = document.getElementById('uploadModal');
+            modal.style.display = 'block';
+        });
+
+        // Close modal when clicking (x)
+        document.querySelector('#uploadModal .close').addEventListener('click', function() {
+            document.getElementById('uploadModal').style.display = 'none';
+        });
+
+        // Handle file upload
+        function handleFileUpload() {
+            const fileInput = document.getElementById('jsonFileInput');
+            const file = fileInput.files[0];
+            
+            if (!file) {
+                alert('Please select a file first.');
+                return;
+            }
+
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                try {
+                    const data = JSON.parse(e.target.result);
+                    // Update the portfolio with the new data
+                    updatePortfolio(data);
+                    // Hide the modal
+                    document.getElementById('uploadModal').style.display = 'none';
+                } catch (error) {
+                    alert('Error reading the file. Please make sure it\'s a valid JSON file.');
+                    console.error('Error:', error);
+                }
+            };
+            reader.readAsText(file);
+        }
+    </script>
+
+    <style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+            animation: fadeIn 0.3s;
+        }
+
+        .modal-content {
+            background: var(--secondary-bg);
+            color: var(--text-primary);
+            margin: 15% auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 500px;
+            position: relative;
+            animation: slideIn 0.3s;
+        }
+
+        .close {
+            color: var(--text-primary);
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover {
+            color: var(--accent-color);
+        }
+
+        #jsonFileInput {
+            display: block;
+            margin: 20px 0;
+            width: 100%;
+            padding: 10px;
+            border: 2px dashed var(--accent-color);
+            border-radius: 5px;
+            background: var(--primary-bg);
+            color: var(--text-primary);
+        }
+
+        .upload-btn {
+            background: var(--accent-color);
+            color: var(--primary-bg);
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: transform 0.2s;
+        }
+
+        .upload-btn:hover {
+            transform: translateY(-2px);
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        @keyframes slideIn {
+            from { transform: translateY(-50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+    </style>
 </body>
-<script src="script.js"></script>
 </html>
